# tui-anki

./: .gitignore  pyproject.toml
tanki/: __main__.py  app.py  buttons.py  card.py  container.py  deck.py  decks.py  evaluation.py  repository.py  tanki.scss
tanki/database/: examples.sql  statements.sql  turso.py
tanki/repository/: __init__.py  card.py  deck.py
tanki/widgets/: buttons.py
