[tool.poetry]
name = "tanki"
version = "0.1.0"
description = ""
authors = ["luisanthony196 <luis.anthony.chavarria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
libsql-experimental = "^0.0.34"
textual = "^0.73.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
